--- a/masters_customer.html
+++ b/masters_customer.html
@@ -308,6 +308,10 @@
                                     <div class="justify-content-center align-items-center row col-md">
                                         <span class="update_fields_CustomerRelationships justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
                                         <span class="add_fields justify-content-center add_fields_CustomerRelationships col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                            <select dataKey="CustomerGenderID" class="postData form-select col-sm"
+                                                name="" id="" placeholder="Customer Gender">
+                                                <option value="">Select Type</option>
+                                            </select>
                                             <input type="text" dataKey="CustomerRelationshipTitle"
                                                 class="postData form-control col-sm" name="" id=""
                                                 placeholder="Relationship Title" />
@@ -328,6 +332,7 @@
                                             <th>S.NO</th>
                                             <th>Relationship Title</th>
                                             <th>Relationship Value</th>
+                                            <th>Gender</th>
                                             <th>ACTIONS</th>
                                         </tr>
                                     </thead>
@@ -336,8 +341,9 @@
                                     <tfoot>
                                         <tr>
                                             <th>S.NO</th>
-                                            <th>DATA NAME</th>
-                                            <th>DATA VALUE</th>
+                                            <th>Relationship Title</th>
+                                            <th>Relationship Value</th>
+                                            <th>Gender</th>
                                             <th>ACTIONS</th>
                                         </tr>
                                     </tfoot>
