--- a/document.html
+++ b/document.html
@@ -343,7 +343,7 @@
                             <img class="img-fluid rounded" src="./assets/svg/graphic-stamp-paper.svg" alt="">
                         </div>
                         <div class="googoose-wrapper card-body p-2 overflow-auto h-75"
-                            style="text-align: justify;text-justify: inter-word;line-height: 32px;font-family:'Times New Roman', Times, serif;font-size: medium;"
+                            style="color: black;"
                             id="deed_body_view"></div>
                     </div>
                 </div>
