--- a/document.html
+++ b/document.html
@@ -330,6 +330,12 @@
                                     <li><a class="dropdown-item download_PDF">Download PDF</a></li>
                                 </ul>
                             </div>
+                            <div style="width: 208px;" class="input-group mt-2">
+                                <input type="number" class="form-control" id="inputTopmargin" placeholder="Top margin">
+                                <div class="input-group-prepend">
+                                    <div style="background-color: #c8c7c7;color: black;" class="input-group-text">px</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -343,8 +349,8 @@
                             <img class="img-fluid rounded" src="./assets/svg/graphic-stamp-paper.svg" alt="">
                         </div>
                         <div class="googoose-wrapper card-body p-2 overflow-auto h-75"
-                            style="color: black;font-family: 'Times New Roman', Times, serif;"
-                            id="deed_body_view"></div>
+                            style="color: black;font-family: 'Times New Roman', Times, serif;" id="deed_body_view">
+                        </div>
                     </div>
                 </div>
             </div>
