--- a/document.html
+++ b/document.html
@@ -331,7 +331,7 @@
                                 </ul>
                             </div>
                             <div style="width: 208px;" class="input-group mt-2">
-                                <input type="number" class="form-control" id="inputTopmargin" placeholder="Top margin">
+                                <input type="number" min='0' class="form-control" id="inputTopmargin" placeholder="Top margin">
                                 <div class="input-group-prepend">
                                     <div style="background-color: #c8c7c7;color: black;" class="input-group-text">px</div>
                                 </div>
