--- a/document.html
+++ b/document.html
@@ -1507,6 +1507,7 @@
                                                             <select deed_id="DocumentSchedulePropID" class="form-select"
                                                                 name="" id="inputScheduleProp">
                                                                 <option value="0">Schedule of property</option>
+                                                                <option value="1">Schedule B</option>
                                                             </select>
                                                             <label for="inputScheduleProp">Select Schedule</label>
                                                         </div>
