--- a/document.html
+++ b/document.html
@@ -745,9 +745,8 @@
                                                                         class="form-select" name=""
                                                                         id="inputVendorRepresenterType">
                                                                         <option value="">Type</option>
-                                                                        <option value="Guardian">Guardian</option>
                                                                     </select>
-                                                                    <label for="inputVendorTitle">Title</label>
+                                                                    <label for="inputVendorTitle">Type</label>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-4 mb-3">
@@ -1783,14 +1782,14 @@
                                                             <label for="inputWitnessAge">Age</label>
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-4 mb-3">
+                                                    <!-- <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
                                                             <input deed_id="documentWitnessPersonPAN" type="text"
                                                                 save_id="DocumentWitnessPAN" class="form-control"
                                                                 name="" id="inputWitnessPan" placeholder="Enter Pan" />
                                                             <label for="inputWitnessPan">Pan</label>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating" id="inputWitnessRelationshipDiv">
                                                             <select deed_id="documentWitnessPersonRelationshipTitle"
@@ -1822,7 +1821,7 @@
                                                             <label for="inputWitnessAadhar">Aadhar No</label>
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-4 mb-3">
+                                                    <!-- <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
                                                             <input deed_id="documentWitnessPersonPhone"
                                                                 save_id="DocumentWitnessPhoneNumber" maxlength="10"
@@ -1831,7 +1830,7 @@
                                                                 placeholder="Phone No" />
                                                             <label for="inputWitnessPhone">Phone No</label>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
                                                             <input type="text" class="form-control" name=""
