--- a/document.html
+++ b/document.html
@@ -349,7 +349,7 @@
                             <img class="img-fluid rounded" src="./assets/svg/graphic-stamp-paper.svg" alt="">
                         </div>
                         <div class="googoose-wrapper card-body p-2 overflow-auto h-75"
-                            style="color: black;font-family: 'Times New Roman', Times, serif;" id="deed_body_view">
+                            style="color: black;font-family: 'Times New Roman', Times, serif; text-align: justify;" id="deed_body_view">
                         </div>
                     </div>
                 </div>
