--- a/document.html
+++ b/document.html
@@ -691,6 +691,15 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
+                                                            <input type="number" class="form-control" name=""
+                                                                save_id="DocumentVendorPinCode" id="inputVendorPincode"
+                                                                deed_id="documentFirstPersonPincode"
+                                                                placeholder="Pincode" />
+                                                            <label for="inputVendorPincode">Pincode</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4 mb-3">
+                                                        <div class="form-floating">
                                                             <input type="text" deed_id="documentFirstPersonTaluk"
                                                                 class="form-control" name="" id="inputVendorTaluk"
                                                                 save_id="DocumentVendorTaluk" placeholder="Taluk" />
@@ -716,19 +725,10 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" deed_id="documentFirstPersonState"
+                                                            <input type="text" deed_id="documentFirstPersonState" disabled
                                                                 save_id="DocumentVendorState" class="form-control"
                                                                 name="" id="inputVendorState" placeholder="State" />
                                                             <label for="inputVendorState">State</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4 mb-3">
-                                                        <div class="form-floating">
-                                                            <input type="number" class="form-control" name=""
-                                                                save_id="DocumentVendorPinCode" id="inputVendorPincode"
-                                                                deed_id="documentFirstPersonPincode"
-                                                                placeholder="Pincode" />
-                                                            <label for="inputVendorPincode">Pincode</label>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12 mb-3">
@@ -871,6 +871,17 @@
                                                             </div>
                                                             <div class="col-md-4 mb-3">
                                                                 <div class="form-floating">
+                                                                    <input type="number" class="form-control" name=""
+                                                                        save_id="DocumentVendorRepresenterPinCode"
+                                                                        id="inputVendorRepresenterPincode"
+                                                                        deed_id="documentFirstPersonRepresenterPincode"
+                                                                        placeholder="Pincode" />
+                                                                    <label
+                                                                        for="inputVendorRepresenterPincode">Pincode</label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4 mb-3">
+                                                                <div class="form-floating">
                                                                     <input type="text"
                                                                         deed_id="documentFirstPersonRepresenterTaluk"
                                                                         class="form-control" name=""
@@ -907,24 +918,13 @@
                                                             <div class="col-md-4 mb-3">
                                                                 <div class="form-floating">
                                                                     <input type="text"
-                                                                        deed_id="documentFirstPersonRepresenterState"
+                                                                        deed_id="documentFirstPersonRepresenterState" disabled
                                                                         save_id="DocumentVendorRepresenterState"
                                                                         class="form-control" name=""
                                                                         id="inputVendorRepresenterState"
                                                                         placeholder="State" />
                                                                     <label
                                                                         for="inputVendorRepresenterState">State</label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-4 mb-3">
-                                                                <div class="form-floating">
-                                                                    <input type="number" class="form-control" name=""
-                                                                        save_id="DocumentVendorRepresenterPinCode"
-                                                                        id="inputVendorRepresenterPincode"
-                                                                        deed_id="documentFirstPersonRepresenterPincode"
-                                                                        placeholder="Pincode" />
-                                                                    <label
-                                                                        for="inputVendorRepresenterPincode">Pincode</label>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1180,6 +1180,16 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
+                                                            <input type="number" class="form-control" name=""
+                                                                save_id="DocumentPurchaserPinCode"
+                                                                id="inputPurchaserPincode"
+                                                                deed_id="documentSecondPersonPincode"
+                                                                placeholder="Pincode" />
+                                                            <label for="inputPurchaserPincode">Pincode</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4 mb-3">
+                                                        <div class="form-floating">
                                                             <input type="text" deed_id="documentSecondPersonTaluk"
                                                                 save_id="DocumentPurchaserTaluk" class="form-control"
                                                                 name="" id="inputPurchaserTaluk" placeholder="Taluk" />
@@ -1205,20 +1215,10 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" deed_id="documentSecondPersonState"
+                                                            <input type="text" deed_id="documentSecondPersonState" disabled
                                                                 save_id="DocumentPurchaserState" class="form-control"
                                                                 name="" id="inputPurchaserState" placeholder="State" />
                                                             <label for="inputPurchaserState">State</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4 mb-3">
-                                                        <div class="form-floating">
-                                                            <input type="number" class="form-control" name=""
-                                                                save_id="DocumentPurchaserPinCode"
-                                                                id="inputPurchaserPincode"
-                                                                deed_id="documentSecondPersonPincode"
-                                                                placeholder="Pincode" />
-                                                            <label for="inputPurchaserPincode">Pincode</label>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12 mb-3">
@@ -1368,6 +1368,17 @@
                                                             </div>
                                                             <div class="col-md-4 mb-3">
                                                                 <div class="form-floating">
+                                                                    <input type="number" class="form-control" name=""
+                                                                        save_id="DocumentPurchaserRepresenterPinCode"
+                                                                        id="inputPurchaserRepresenterPincode"
+                                                                        deed_id="documentSecondPersonRepresenterPincode"
+                                                                        placeholder="Pincode" />
+                                                                    <label
+                                                                        for="inputPurchaserRepresenterPincode">Pincode</label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4 mb-3">
+                                                                <div class="form-floating">
                                                                     <input type="text"
                                                                         deed_id="documentSecondPersonRepresenterTaluk"
                                                                         save_id="DocumentPurchaserRepresenterTaluk"
@@ -1405,24 +1416,13 @@
                                                             <div class="col-md-4 mb-3">
                                                                 <div class="form-floating">
                                                                     <input type="text"
-                                                                        deed_id="documentSecondPersonRepresenterState"
+                                                                        deed_id="documentSecondPersonRepresenterState" disabled
                                                                         save_id="DocumentPurchaserRepresenterState"
                                                                         class="form-control" name=""
                                                                         id="inputPurchaserRepresenterState"
                                                                         placeholder="State" />
                                                                     <label
                                                                         for="inputPurchaserRepresenterState">State</label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-4 mb-3">
-                                                                <div class="form-floating">
-                                                                    <input type="number" class="form-control" name=""
-                                                                        save_id="DocumentPurchaserRepresenterPinCode"
-                                                                        id="inputPurchaserRepresenterPincode"
-                                                                        deed_id="documentSecondPersonRepresenterPincode"
-                                                                        placeholder="Pincode" />
-                                                                    <label
-                                                                        for="inputPurchaserRepresenterPincode">Pincode</label>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1843,6 +1843,16 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
+                                                            <input type="number" class="form-control" name=""
+                                                                id="inputWitnessPincode"
+                                                                deed_id="documentWitnessPersonPincode"
+                                                                save_id="DocumentWitnessPinCode"
+                                                                placeholder="Pincode" />
+                                                            <label for="inputWitnessPincode">Pincode</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4 mb-3">
+                                                        <div class="form-floating">
                                                             <input type="text" deed_id="documentWitnessPersonTaluk"
                                                                 save_id="DocumentWitnessTaluk" class="form-control"
                                                                 name="" id="inputWitnessTaluk" placeholder="Taluk" />
@@ -1868,20 +1878,10 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" deed_id="documentWitnessPersonState"
+                                                            <input type="text" deed_id="documentWitnessPersonState" disabled
                                                                 save_id="DocumentWitnessState" class="form-control"
                                                                 name="" id="inputWitnessState" placeholder="State" />
                                                             <label for="inputWitnessState">State</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4 mb-3">
-                                                        <div class="form-floating">
-                                                            <input type="number" class="form-control" name=""
-                                                                id="inputWitnessPincode"
-                                                                deed_id="documentWitnessPersonPincode"
-                                                                save_id="DocumentWitnessPinCode"
-                                                                placeholder="Pincode" />
-                                                            <label for="inputWitnessPincode">Pincode</label>
                                                         </div>
                                                     </div>
                                                 </div>
