--- a/document.html
+++ b/document.html
@@ -331,9 +331,11 @@
                                 </ul>
                             </div>
                             <div style="width: 208px;" class="input-group mt-2">
-                                <input type="number" min='0' class="form-control" id="inputTopmargin" placeholder="Top margin">
+                                <input type="number" min='0' class="form-control" id="inputTopmargin"
+                                    placeholder="Top margin">
                                 <div class="input-group-prepend">
-                                    <div style="background-color: #c8c7c7;color: black;" class="input-group-text">px</div>
+                                    <div style="background-color: #c8c7c7;color: black;" class="input-group-text">px
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -349,7 +351,8 @@
                             <img class="img-fluid rounded" src="./assets/svg/graphic-stamp-paper.svg" alt="">
                         </div>
                         <div class="googoose-wrapper card-body p-2 overflow-auto h-75"
-                            style="color: black;font-family: 'Times New Roman', Times, serif; text-align: justify;" id="deed_body_view">
+                            style="color: black;font-family: 'Times New Roman', Times, serif; text-align: justify;"
+                            id="deed_body_view">
                         </div>
                     </div>
                 </div>
@@ -725,9 +728,10 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" deed_id="documentFirstPersonState" disabled
-                                                                save_id="DocumentVendorState" class="form-control"
-                                                                name="" id="inputVendorState" placeholder="State" />
+                                                            <input type="text" deed_id="documentFirstPersonState"
+                                                                disabled save_id="DocumentVendorState"
+                                                                class="form-control" name="" id="inputVendorState"
+                                                                placeholder="State" />
                                                             <label for="inputVendorState">State</label>
                                                         </div>
                                                     </div>
@@ -918,7 +922,8 @@
                                                             <div class="col-md-4 mb-3">
                                                                 <div class="form-floating">
                                                                     <input type="text"
-                                                                        deed_id="documentFirstPersonRepresenterState" disabled
+                                                                        deed_id="documentFirstPersonRepresenterState"
+                                                                        disabled
                                                                         save_id="DocumentVendorRepresenterState"
                                                                         class="form-control" name=""
                                                                         id="inputVendorRepresenterState"
@@ -1215,9 +1220,10 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" deed_id="documentSecondPersonState" disabled
-                                                                save_id="DocumentPurchaserState" class="form-control"
-                                                                name="" id="inputPurchaserState" placeholder="State" />
+                                                            <input type="text" deed_id="documentSecondPersonState"
+                                                                disabled save_id="DocumentPurchaserState"
+                                                                class="form-control" name="" id="inputPurchaserState"
+                                                                placeholder="State" />
                                                             <label for="inputPurchaserState">State</label>
                                                         </div>
                                                     </div>
@@ -1416,7 +1422,8 @@
                                                             <div class="col-md-4 mb-3">
                                                                 <div class="form-floating">
                                                                     <input type="text"
-                                                                        deed_id="documentSecondPersonRepresenterState" disabled
+                                                                        deed_id="documentSecondPersonRepresenterState"
+                                                                        disabled
                                                                         save_id="DocumentPurchaserRepresenterState"
                                                                         class="form-control" name=""
                                                                         id="inputPurchaserRepresenterState"
@@ -1537,6 +1544,15 @@
                                                                     rows="10"></textarea>
                                                                 <label for="inputPropertyDetails">Schedule
                                                                     of property</label>
+                                                            </div>
+                                                            <div
+                                                                class="form-floating order-2 mb-3 col-md-12 PropertyDetailsFormInput">
+                                                                <textarea save_id="DocumentPropertyDetails"
+                                                                    class="property_details form-control"
+                                                                    name="inputPropertyDetails[]" id="" cols="30"
+                                                                    rows="10"></textarea>
+                                                                <label for="inputPropertyDetails">Schedule
+                                                                    B</label>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1878,9 +1894,10 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" deed_id="documentWitnessPersonState" disabled
-                                                                save_id="DocumentWitnessState" class="form-control"
-                                                                name="" id="inputWitnessState" placeholder="State" />
+                                                            <input type="text" deed_id="documentWitnessPersonState"
+                                                                disabled save_id="DocumentWitnessState"
+                                                                class="form-control" name="" id="inputWitnessState"
+                                                                placeholder="State" />
                                                             <label for="inputWitnessState">State</label>
                                                         </div>
                                                     </div>
