--- a/document.html
+++ b/document.html
@@ -1512,6 +1512,7 @@
                                                         <div class="form-floating" id="inputSchedulePropDiv">
                                                             <select deed_id="DocumentSchedulePropID" class="form-select"
                                                                 name="" id="inputScheduleProp">
+                                                                <option value="">Select</option>
                                                                 <option value="0">Schedule of property</option>
                                                                 <option value="1">Schedule B</option>
                                                             </select>
